Fix fullscreen progress layout on small devices

--- a/packages/web/app/components/layouts/FullscreenProgressLayout.module.scss
+++ b/packages/web/app/components/layouts/FullscreenProgressLayout.module.scss
@@ -3,6 +3,10 @@
     top: $header-height-md;
   }
 
+  @include media-breakpoint-down(sm) {
+    top: $header-height-sm;
+  }
+
   grid-area: progress;
   margin: 0;
   top: $header-height-lg;
